[tool.poetry]
name = "borgdrone2"
version = "0.1.0"
description = ""
authors = ["Aljoscha Vollmerhaus <git@aljoscha.vollmerhaus.net>"]
homepage = "https://github.com/avollmerhaus/borgdrone2"
readme = "README.md"
packages = [{include = "borgdrone2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
borgdrone2 = 'borgdrone2.cli:cli'